lanecwe-Prod/src/objects/RegionWiseApprovalLevels__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>APACRegion__c</fullName>
        <label>APACRegion</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMEARegion__c</fullName>
        <label>EMEARegion</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NARegion__c</fullName>
        <label>NARegion</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RegionWiseApprovalLevels</label>
</CustomObject>